4월 25일 작업 내용 업로드

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # log
+logging.level.root=info
+logging.level.bitcamp.backend=debug
 
 # server
 # server.port=8080
-server.port=80 
+server.port=80
 
 # database
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -12,7 +14,7 @@ spring.datasource.username=study
 spring.datasource.password=study!!11
 
 # mybatis
-mybatis.type-aliases-package=bitcamp.backend.community.vo, bitcamp.backend.register.vo
+mybatis.type-aliases-package=bitcamp.backend.qna.vo, bitcamp.backend.community.vo, bitcamp.backend.register.vo
 #mybatis.mapper-locations=/bitcamp/myapp/mapper/*Mapper.xml
 
 # web
